--- a/assets/stylesheets/background.scss
+++ b/assets/stylesheets/background.scss
@@ -21,3 +21,15 @@
 
 // margin: 0 auto; position: absolute;
 //   margin: auto;
+
+// .canvas {
+//   background: url('assets/images/bg1.png');
+//   display: block;
+//   margin: auto;
+//   margin-top: 100px;
+// }
+//
+// * {
+//   padding: 0;
+//   margin: 0;
+// }
