--- a/assets/stylesheets/background.css
+++ b/assets/stylesheets/background.css
@@ -1,12 +1,66 @@
 body {
-  background: url("../images/background/city_1.jpg");
+  background: url("../images/background/cave_blue.jpg");
   background-size: cover;
+  display: block;
+  /* display: flex;
+  justify-content: center; */
+  /* top: 50%; */
+  /* align-items: center; */
+  /* vertical-align: middle */
 }
 
 header {
   display: flex;
   justify-content: center;
   height: 100%;
+}
+
+.start_screen {
+  position: absolute;
+  z-index: 1;
+  left: 40%;
+  top: 40%;
+}
+
+.start_button:hover {
+  background-color: white;
+}
+
+.start_button_hide {
+  display: none;
+}
+
+.start_button {
+  background-color: red;
+  cursor: pointer;
+  border-radius: 25px;
+}
+
+.restart_button {
+  display: none;
+}
+
+.restart_button_hide {
+  display: none;
+}
+
+.restart_button_show {
+  display:block;
+  cursor: pointer;
+}
+
+
+
+.canvas_container {
+  /* display: flex; */
+  position: relative;
+  /* display: flex;
+
+  justify-content: center; */
+  /* width: 100%;
+  height: 100%; */
+  /* overflow: hidden; */
+  /* z-index: 1000; */
 }
 
 
@@ -23,6 +77,8 @@ header {
 }
 
 .canvas {
+  position: relative;
+  /* top: 50%; */
   -webkit-box-shadow: inset 0px 0px 35px 3px rgba(0,0,0,0.67);
   -moz-box-shadow: 0px 0px 35px 3px rgba(0,0,0,0.67);
   box-shadow: 0px 0px 35px 3px rgba(0,0,0,0.67);
