--- a/assets/stylesheets/background.css
+++ b/assets/stylesheets/background.css
@@ -86,6 +86,7 @@ header {
 }
 
 .canvas {
+  overflow:visible;
   position: relative;
   /* top: 50%; */
   -webkit-box-shadow: inset 0px 0px 35px 3px rgba(0,0,0,0.67);
