--- a/assets/stylesheets/background.css
+++ b/assets/stylesheets/background.css
@@ -1,7 +1,7 @@
 body {
   background: url("../images/background/cave_blue.jpg");
   background-size: cover;
-  display: block;
+  display: inline;
   /* display: flex;
   justify-content: center; */
   /* top: 50%; */
@@ -18,22 +18,148 @@ header {
 .start_screen {
   position: absolute;
   z-index: 1;
-  left: 40%;
+  left: 45%;
   top: 40%;
 }
 
 .start_button:hover {
   background-color: white;
+  border: 5px solid black;
+
 }
 
 .start_button_hide {
   display: none;
 }
 
+button:focus {
+  outline: 0;
+}
+
 .start_button {
   background-color: red;
+  border: 5px solid black;
+  /* border-style: none; */
+  /* border: 5px solid black; */
   cursor: pointer;
-  border-radius: 25px;
+  border-radius: 15px;
+  padding: 10px;
+  text-align: center;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 32px;
+}
+
+div.sidebar_links {
+  /* border: 1px solid white;
+  height: 30%;
+  display: flex;
+  justify-content: center; */
+  /* display: flex; */
+}
+
+.sidebar_links {
+  /* border: 1px solid white; */
+  list-style: none;
+  /* right: 0; */
+  /* margin: auto; */
+  width: 60px;
+  height: 160px;
+  margin-right: 50px;
+  /* top: 0; */
+  /* padding-bottom: 140px; */
+  /* margin: autoauto; */
+}
+.left_sidebar_links {
+  /* border: 1px solid white; */
+  list-style: none;
+  /* right: 0; */
+  /* margin: auto; */
+  width: 90px;
+  height: 160px;
+  margin-left: 31px;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color: #fff;
+  text-decoration:underline;
+  text-align: center;
+  /* margin-right: 50px; */
+  /* top: 0; */
+  /* padding-bottom: 140px; */
+  /* margin: autoauto; */
+}
+
+.left_sidebar_links > li {
+  /* top: 0; */
+  /* padding-bottom: 140px; */
+  /* margin-top: 140px;
+  margin-bottom: 140px; */
+}
+
+.sidebar_links > li {
+  /* top: 0; */
+  margin-top: 140px;
+  margin-bottom: 140px;
+}
+
+.sidebar_links_container {
+  /* top: 0; */
+  display: flex;
+  /* align-items: center; */
+  /* justify-content: space-around; */
+
+  /* border: 1px solid white; */
+  /* margin: auto; */
+}
+
+.left_sidebar_links_container {
+  display: flex;
+  /* top: 0; */
+  /* display: flex; */
+  /* justify-content: space-around; */
+
+  /* border: 1px solid white; */
+  /* margin: auto; */
+}
+
+img.globe {
+  width: 51px;
+  /* padding-bottom: 140px; */
+  /* padding-top: 160px; */
+  /* width: 20%; */
+  /* margin-top: 60px; */
+
+}
+
+li.move_text {
+  margin-bottom: 0;
+  margin-top: 140px;
+}
+
+img.keys {
+  /* padding-bottom: 140px; */
+  /* padding-top: 140px; */
+  width: 100px;
+  margin-top: 0;
+  margin-bottom: 140px;
+
+}
+
+img.spacebar {
+  width: 100px;
+}
+
+img.github {
+  /* padding-bottom: 140px; */
+  /* padding-top: 140px; */
+  width: 51px;
+}
+
+img.linkedin {
+  padding-bottom: 0;
+  /* padding-top: 140px; */
+  width: 51px;
+
 }
 
 .gameover_screen {
@@ -41,6 +167,7 @@ header {
   z-index: 1;
   left: 35%;
   top: 30%;
+
 }
 
 .restart_button {
@@ -58,35 +185,29 @@ header {
   cursor: pointer;
 } */
 
+.canvas_two_container {
+  display: flex;
+}
 
 
 .canvas_container {
-  /* display: flex; */
   position: relative;
-  /* display: flex;
-
-  justify-content: center; */
-  /* width: 100%;
-  height: 100%; */
-  /* overflow: hidden; */
-  /* z-index: 1000; */
 }
 
 
 .welcome_sign {
   width: 40%;
   margin: 0;
-  /* height: 200px; */
   align-self: center;
   background-size: cover;
   z-index: 1;
   -webkit-filter: drop-shadow(10px 10px 10px #222);
  filter: drop-shadow(10px 10px 10px #222);
-  /* box-shadow: 5px 5px 5px black; */
 }
 
 .canvas {
-  overflow:visible;
+
+  /* overflow:visible; */
   position: relative;
   /* top: 50%; */
   -webkit-box-shadow: inset 0px 0px 35px 3px rgba(0,0,0,0.67);
