Add monster bullet attack, fully functional, fixed bullet rendering for directions

--- a/assets/stylesheets/background.css
+++ b/assets/stylesheets/background.css
@@ -32,7 +32,7 @@ button:focus {
 }
 
 .start_button {
-  background-color: #32cd32;
+  background-color: #7ea228;
   border: 5px solid black;
   cursor: pointer;
   border-radius: 15px;
